Fix missing image path in Rock Paper Scissors project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="user-selection">
                 <button class="btn" data-image="rock">
-                    <img src="./img/rock.PNG" alt="Rock gesture for Rock Paper Scissors game">
+                    <img src="./img/rock.png" alt="Rock gesture for Rock Paper Scissors game">
                 </button>
                 <button class="btn" data-image="paper">
                     <img src="./img/paper.PNG" alt="Paper gesture for Rock Paper Scissors game">
